--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -65,15 +65,22 @@ $colors: ( // Default
 );
 
 // Media Breakpoints
-$tablet: 750px;
-$phone: 550px;
+$tablet: 770px;
+$phone: 500px;
+// $phone: 440px;
 // @import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,400i&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700&display=swap');
+
 // Transisi
 $transition: 350ms ease-in-out;
 $transition-fast: 200ms ease-in-out;
 $transition-slow: 500ms ease-in-out;
 $transition-slower: 1500ms ease-in-out;
+
+//Height
+$navbar-height:12vh;
+$navbar-height-scroll:10vh;
+$navbar-bar-height:9vh;
 
 html {
 	scroll-behavior: smooth;
