--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,212 @@ body {
   height: 100%;
 }
 
-.navbar {
+.transparent {
+  opacity: 0;
+  -webkit-transition: 350ms ease-in-out;
+  transition: 350ms ease-in-out;
+}
+
+.transparent:hover {
+  opacity: 1;
+}
+
+.glide {
+  position: relative;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.glide * {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+.glide__track {
+  overflow: hidden;
+}
+
+.glide__slides {
+  position: relative;
+  width: 100%;
+  list-style: none;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -ms-touch-action: pan-Y;
+      touch-action: pan-Y;
+  overflow: hidden;
+  padding: 0;
+  white-space: nowrap;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  will-change: transform;
+}
+
+.glide__slides--dragging {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.glide__slide {
+  width: 100%;
+  height: 100%;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  white-space: normal;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.glide__slide a {
+  -webkit-user-select: none;
+          user-select: none;
+  -webkit-user-drag: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+
+.glide__arrows {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.glide__bullets {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.glide--rtl {
+  direction: rtl;
+}
+
+.glide__arrow {
+  position: absolute;
+  display: block;
+  top: 50%;
+  z-index: 2;
+  color: #ff9933;
+  text-transform: uppercase;
+  padding: 9px 12px;
+  background-color: transparent;
+  border: none;
+  text-shadow: 0 0.25em 0.5em rgba(0, 0, 0, 0.1);
+  opacity: 1;
+  cursor: pointer;
+  -webkit-transition: opacity 150ms ease, border 300ms ease-in-out;
+  transition: opacity 150ms ease, border 300ms ease-in-out;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  line-height: 1;
+  font-size: 2em;
+}
+
+@media (max-width: 770px) {
+  .glide__arrow {
+    font-size: 1.8em;
+  }
+}
+
+@media (max-width: 440px) {
+  .glide__arrow {
+    font-size: 1.2em;
+  }
+}
+
+.glide__arrow:focus {
+  outline: none;
+}
+
+.glide__arrow:hover {
+  color: #ffb366;
+}
+
+.glide__arrow--left {
+  left: 2em;
+}
+
+.glide__arrow--right {
+  right: 2em;
+}
+
+.glide__arrow--disabled {
+  opacity: 0.33;
+}
+
+.glide__bullets {
+  position: absolute;
+  z-index: 2;
+  bottom: 2em;
+  left: 50%;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  list-style: none;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.glide__bullet {
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 9px;
+  height: 9px;
+  padding: 0;
+  border-radius: 50%;
+  border: 2px solid transparent;
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+  cursor: pointer;
+  line-height: 0;
+  -webkit-box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.1);
+  margin: 0 0.25em;
+}
+
+.glide__bullet:focus {
+  outline: none;
+}
+
+.glide__bullet:hover, .glide__bullet:focus {
+  border: 2px solid white;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.glide__bullet--active {
+  background-color: white;
+}
+
+.glide--swipeable {
+  cursor: grab;
+  cursor: -webkit-grab;
+}
+
+.glide--dragging {
+  cursor: grabbing;
+  cursor: -webkit-grabbing;
+}
+
+body {
+  background-color: #ffcc99;
+}
+
+body .navbar {
   position: fixed;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -44,10 +249,10 @@ body {
   background-color: rgba(153, 77, 0, 0);
   -webkit-transition: 350ms ease-in-out;
   transition: 350ms ease-in-out;
-  z-index: 2;
+  z-index: 3;
 }
 
-.navbar_logo {
+body .navbar_logo {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -71,23 +276,23 @@ body {
   width: 30%;
 }
 
-.navbar_logo:hover {
+body .navbar_logo:hover {
   -webkit-filter: drop-shadow(0 0 5px #5D382E);
           filter: drop-shadow(0 0 5px #5D382E);
 }
 
-@media (max-width: 500px) {
-  .navbar_logo {
+@media (max-width: 440px) {
+  body .navbar_logo {
     width: 65%;
   }
 }
 
-.navbar_logo_img img {
+body .navbar_logo_img img {
   height: 5em;
   width: 5em;
 }
 
-.navbar_logo_text {
+body .navbar_logo_text {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -108,12 +313,12 @@ body {
   padding-left: 1em;
 }
 
-.navbar_logo_text p {
+body .navbar_logo_text p {
   color: white;
   font-weight: bold;
 }
 
-.navbar_logo_scroll {
+body .navbar_logo_scroll {
   letter-spacing: 0.3125rem;
   font-size: 1.25rem;
   color: #fff2e6;
@@ -122,7 +327,7 @@ body {
   pointer-events: all;
 }
 
-.navbar_nav-links {
+body .navbar_nav-links {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -148,7 +353,7 @@ body {
 }
 
 @media (max-width: 770px) {
-  .navbar_nav-links {
+  body .navbar_nav-links {
     padding-left: 0em;
     position: absolute;
     right: 0;
@@ -177,8 +382,8 @@ body {
   }
 }
 
-@media (max-width: 500px) {
-  .navbar_nav-links {
+@media (max-width: 440px) {
+  body .navbar_nav-links {
     padding-left: 0em;
     position: absolute;
     left: 0;
@@ -208,29 +413,31 @@ body {
   }
 }
 
-.navbar_nav-links_scroll {
-  top: 10vh;
-  height: 90vh;
+@media (max-width: 770px) {
+  body .navbar_nav-links_scroll {
+    top: 10vh;
+    height: 90vh;
+  }
 }
 
-@media (max-width: 500px) {
-  .navbar_nav-links_scroll {
+@media (max-width: 440px) {
+  body .navbar_nav-links_scroll {
     height: 81vh;
   }
 }
 
-.navbar_nav-links_click {
+body .navbar_nav-links_click {
   opacity: 1;
   width: 30%;
 }
 
-@media (max-width: 500px) {
-  .navbar_nav-links_click {
+@media (max-width: 440px) {
+  body .navbar_nav-links_click {
     width: 40%;
   }
 }
 
-.navbar_nav-links li a {
+body .navbar_nav-links li a {
   text-align: center;
   color: #fff2e6;
   text-decoration: none;
@@ -240,53 +447,53 @@ body {
   transition: 350ms ease-in-out;
 }
 
-.navbar_nav-links li a.active {
+body .navbar_nav-links li a.active {
   font-weight: bold;
 }
 
-.navbar_nav-links li a:hover {
+body .navbar_nav-links li a:hover {
   text-shadow: 1px 0 1em #331a00;
 }
 
-.navbar_burger {
+body .navbar_burger {
   display: none;
   -webkit-transition: 350ms ease-in-out;
   transition: 350ms ease-in-out;
 }
 
 @media (max-width: 770px) {
-  .navbar_burger {
-    z-index: 2;
+  body .navbar_burger {
+    z-index: 3;
     display: block;
   }
 }
 
-@media (max-width: 500px) {
-  .navbar_burger {
+@media (max-width: 440px) {
+  body .navbar_burger {
     display: none;
   }
 }
 
-.navbar_burger_click {
+body .navbar_burger_click {
   -webkit-transform: rotate(360deg);
           transform: rotate(360deg);
 }
 
-.navbar_burger_click .line1 {
+body .navbar_burger_click .line1 {
   -webkit-transform: rotate(-45deg) translate(-5px, 6px);
           transform: rotate(-45deg) translate(-5px, 6px);
 }
 
-.navbar_burger_click .line2 {
+body .navbar_burger_click .line2 {
   opacity: 0;
 }
 
-.navbar_burger_click .line3 {
+body .navbar_burger_click .line3 {
   -webkit-transform: rotate(45deg) translate(-5px, -6px);
           transform: rotate(45deg) translate(-5px, -6px);
 }
 
-.navbar_burger div {
+body .navbar_burger div {
   width: 1.5625em;
   height: 0.1875em;
   background-color: white;
@@ -295,12 +502,12 @@ body {
   transition: 350ms ease-in-out;
 }
 
-.navbar_bar {
+body .navbar_bar {
   display: none;
 }
 
-@media (max-width: 500px) {
-  .navbar_bar {
+@media (max-width: 440px) {
+  body .navbar_bar {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -325,21 +532,21 @@ body {
   }
 }
 
-.navbar_bar_tombol {
+body .navbar_bar_tombol {
   font-size: 1.6em;
 }
 
-.navbar_bar_dot {
+body .navbar_bar_dot {
   -webkit-transition: 350ms ease-in-out;
   transition: 350ms ease-in-out;
 }
 
-.navbar_bar_dot_click {
+body .navbar_bar_dot_click {
   -webkit-transform: rotate(-360deg) rotateX(180deg);
           transform: rotate(-360deg) rotateX(180deg);
 }
 
-.navbar_bar_dot_click .line1 {
+body .navbar_bar_dot_click .line1 {
   width: 1.5625em;
   height: 0.1875em;
   -webkit-transform: rotate(-45deg) translate(-5px, 7px);
@@ -347,11 +554,11 @@ body {
   border-radius: 0;
 }
 
-.navbar_bar_dot_click .line2 {
+body .navbar_bar_dot_click .line2 {
   opacity: 0;
 }
 
-.navbar_bar_dot_click .line3 {
+body .navbar_bar_dot_click .line3 {
   width: 1.5625em;
   height: 0.1875em;
   -webkit-transform: rotate(45deg) translate(-5px, -7px);
@@ -359,7 +566,7 @@ body {
   border-radius: 0;
 }
 
-.navbar_bar_dot div {
+body .navbar_bar_dot div {
   width: 0.2875em;
   height: 0.2875em;
   border-radius: 50%;
@@ -369,17 +576,97 @@ body {
   transition: 350ms ease-in-out;
 }
 
-.navbar_scroll {
+body .navbar_scroll {
   background-color: rgba(153, 77, 0, 0.6);
   height: 10vh;
 }
 
-.container-produk {
+body .container-home {
+  padding: 5em;
+}
+
+body .container-kenalan {
+  background-color: #fff2e6;
+}
+
+body .container-kenalan_text-jumbo {
+  padding: 3em;
+  background-color: #fff2e6;
+  color: #331a00;
+  position: relative;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 46% 46%;
+      grid-template-columns: 46% 46%;
+      grid-template-areas: "judul text";
+  grid-gap: 2em;
+}
+
+@media (max-width: 770px) {
+  body .container-kenalan_text-jumbo {
+    -ms-grid-columns: 100%;
+        grid-template-columns: 100%;
+        grid-template-areas: "judul" "text";
+  }
+}
+
+body .container-kenalan_text-jumbo_background {
+  background-image: url("../assets/icon/Logo-BLM-low.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 300px;
+  opacity: .1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
+body .container-kenalan_text-jumbo_judul {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: judul;
+  color: #331a00;
+  text-align: right;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+@media (max-width: 770px) {
+  body .container-kenalan_text-jumbo_judul {
+    text-align: left;
+  }
+}
+
+body .container-kenalan_text-jumbo_judul p {
+  -webkit-transition: 350ms ease-in-out;
+  transition: 350ms ease-in-out;
+  padding: 0 1em 0 0;
+  border-right: 0.2em solid #994d00;
+}
+
+@media (max-width: 770px) {
+  body .container-kenalan_text-jumbo_judul p {
+    padding: 0 0 .2em 0;
+    border-right: none;
+    border-bottom: 0.2em solid #994d00;
+  }
+}
+
+body .container-kenalan_text-jumbo_text {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: text;
+  color: #331a00;
+  text-align: justify;
+}
+
+body .container-produk {
   background-color: #BAA89B;
   padding: 3em;
 }
 
-.container-produk_text {
+body .container-produk_text {
   text-align: center;
   padding: 2em;
   font-size: 1.4em;
@@ -387,7 +674,7 @@ body {
   font-weight: bold;
 }
 
-.container-produk_section {
+body .container-produk_section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -404,7 +691,7 @@ body {
   margin-bottom: 4em;
 }
 
-.container-produk_section_kotak {
+body .container-produk_section_kotak {
   border-left: 0.5em solid #ff9933;
   background-color: #fff2e6;
   border-radius: .4em;
@@ -413,14 +700,14 @@ body {
           clip-path: polygon(0 0, 100% 0%, 100% 97%, 15% 97%, 12% 100%, 9% 97%, 0 97%);
 }
 
-.container-produk_section_text {
+body .container-produk_section_text {
   padding: 1em;
   text-align: center;
   color: #331a00;
   font-weight: bold;
 }
 
-.container-row {
+body .container-row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -439,7 +726,7 @@ body {
 }
 
 @media (max-width: 770px) {
-  .container-row {
+  body .container-row {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -456,7 +743,7 @@ body {
   }
 }
 
-.container-aspirasi {
+body .container-aspirasi {
   background-color: #524439;
   padding: 3em;
   display: -webkit-box;
@@ -474,7 +761,7 @@ body {
           justify-content: center;
 }
 
-.container-aspirasi_text {
+body .container-aspirasi_text {
   text-align: center;
   padding: 2em;
   font-size: 1.4em;
@@ -482,7 +769,7 @@ body {
   font-weight: bold;
 }
 
-.footer {
+body .footer {
   height: 8em;
   background-color: #ffcc99;
   display: -webkit-box;
@@ -503,41 +790,41 @@ body {
 }
 
 @media (max-width: 770px) {
-  .footer {
+  body .footer {
     height: 7em;
   }
 }
 
-@media (max-width: 500px) {
-  .footer {
+@media (max-width: 440px) {
+  body .footer {
     height: 6em;
   }
 }
 
-@media (max-width: 500px) and (max-width: 500px) {
-  .footer {
+@media (max-width: 440px) and (max-width: 440px) {
+  body .footer {
     margin-bottom: 9vh;
   }
 }
 
-.footer_copyright {
+body .footer_copyright {
   color: #ff9933;
   font-size: .9rem;
 }
 
 @media (max-width: 770px) {
-  .footer_copyright {
+  body .footer_copyright {
     font-size: .8rem;
   }
 }
 
-@media (max-width: 500px) {
-  .footer_copyright {
+@media (max-width: 440px) {
+  body .footer_copyright {
     font-size: .7rem;
   }
 }
 
-.footer_contact {
+body .footer_contact {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -559,24 +846,24 @@ body {
 }
 
 @media (max-width: 770px) {
-  .footer_contact {
+  body .footer_contact {
     width: 35%;
     font-size: 1.8rem;
   }
 }
 
-@media (max-width: 500px) {
-  .footer_contact {
+@media (max-width: 440px) {
+  body .footer_contact {
     font-size: 1.6rem;
   }
 }
 
-.footer_contact a {
+body .footer_contact a {
   color: #cc6600;
   text-decoration: none;
 }
 
-.footer_contact a:hover {
+body .footer_contact a:hover {
   -webkit-filter: drop-shadow(0 0 1px #5D382E);
           filter: drop-shadow(0 0 1px #5D382E);
 }
