--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -28,6 +28,15 @@
         @include phone {
             font-size: .7rem;
         }
+
+        a {
+            text-decoration: none;
+            color: color(satu);
+
+            &:hover {
+                filter: drop-shadow(0 0 .3px color(dua));
+            }
+        }
     }
 
     &_contact {
@@ -49,7 +58,7 @@
 
         a {
             color: color(satu-darker);
-            text-decoration: none;
+
 
             &:hover {
                 filter: drop-shadow(0 0 1px color(dua));
