--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -67,8 +67,8 @@ $colors: ( // Default
 // Media Breakpoints
 $tablet: 770px;
 $phone: 440px;
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700&display=swap');
-// @import url('https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap');
+// @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap');
 
 // Transisi
 $transition: 350ms ease-in-out;
@@ -98,8 +98,8 @@ body {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	// font-family: 'Poppins', sans-serif;
-	font-family: 'Playfair Display', serif;
+	font-family: 'Poppins', sans-serif;
+	// font-family: 'Playfair Display', serif;
 }
 
 .fluid {
