--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,11 +1,11 @@
 @mixin tablet {
-  @media (max-width:#{$tablet}) {
+  @media screen and (max-width:#{$tablet}) {
     @content;
   }
 }
 
 @mixin phone {
-  @media (max-width:#{$phone}) {
+  @media screen and (max-width:#{$phone}) {
     @content;
   }
 }
