--- a/scss/components/_text-jumbo.scss
+++ b/scss/components/_text-jumbo.scss
@@ -37,6 +37,9 @@
             // background-size: 300px;
         }
 
+        &_kecil {
+            background-size: 150px;
+        }
     }
 
     &_judul {
