--- a/css/style.css
+++ b/css/style.css
@@ -61,8 +61,6 @@ body { overflow-x: hidden; }
 
 .glide--dragging { cursor: grabbing; cursor: -webkit-grabbing; }
 
-body { background-color: #ffcc99; }
-
 body .navbar { position: fixed; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -ms-flex-pack: distribute; justify-content: space-around; top: 0; left: 0; right: 0; height: 12vh; background-color: rgba(153, 77, 0, 0); -webkit-transition: 350ms ease-in-out; transition: 350ms ease-in-out; z-index: 3; }
 
 body .navbar_logo { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; color: #ffcc99; text-transform: uppercase; text-decoration: none; letter-spacing: 0.1125rem; font-size: 0.6rem; -webkit-transition: 500ms ease-in-out; transition: 500ms ease-in-out; width: 30%; }
@@ -135,13 +133,15 @@ body .navbar_bar_dot div { width: 0.2875em; height: 0.2875em; border-radius: 50%
 
 body .navbar_scroll { background-color: rgba(153, 77, 0, 0.6); height: 10vh; }
 
-body #overlay { background-color: #0a0500; opacity: .7; position: absolute; width: 100%; height: 100%; }
+body #overlay { background-color: #0a0500; opacity: .7; position: absolute; width: 100%; height: 100%; pointer-events: none; }
 
 body .text-jumbo { padding: 3em; background-color: #fff2e6; color: #331a00; position: relative; display: -ms-grid; display: grid; -ms-grid-columns: 46% 46%; grid-template-columns: 46% 46%; grid-template-areas: "judul text"; grid-gap: 2em; }
 
 @media screen and (max-width: 950px) { body .text-jumbo { -ms-grid-columns: 100%; grid-template-columns: 100%; grid-template-areas: "judul" "text"; } }
 
 body .text-jumbo_background { background-image: url("../assets/icon/Logo-BLM-low.png"); background-repeat: no-repeat; background-position: center; background-size: 300px; opacity: .1; position: absolute; width: 100%; height: 100%; pointer-events: none; }
+
+body .text-jumbo_background_kecil { background-size: 150px; }
 
 body .text-jumbo_judul { -ms-grid-row: 1; -ms-grid-column: 1; grid-area: judul; color: #331a00; text-align: right; font-size: 1.5em; font-weight: bold; }
 
@@ -153,7 +153,35 @@ body .text-jumbo_judul p { -webkit-transition: 350ms ease-in-out; transition: 35
 
 body .text-jumbo_text { -ms-grid-row: 1; -ms-grid-column: 2; grid-area: text; color: #331a00; text-align: justify; }
 
-body .text-picture { position: absolute; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; font-size: 3rem; color: #fff2e6; }
+body .picture-header { position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: start; -ms-flex-align: start; align-items: flex-start; font-size: 3rem; color: #fff2e6; height: 100vh; width: 100vw; background-image: url(../../assets/img/IMG_1893-low.jpg); background-size: cover; }
+
+@media screen and (max-width: 950px) { body .picture-header { background-image: url(../../assets/img/IMG_1893-low-tablet.jpg); } }
+
+@media screen and (max-width: 440px) { body .picture-header { background-image: url(../../assets/img/IMG_9962-low-phone.jpg); } }
+
+body .picture-header_text { border: solid 0px; -webkit-transform: translateX(2em); transform: translateX(2em); position: relative; border-left: solid 7px rgba(255, 153, 51, 0.7); border-bottom: solid 0px rgba(255, 153, 51, 0.7); padding-left: 1em; -webkit-transition: 1500ms ease-in-out; transition: 1500ms ease-in-out; }
+
+@media screen and (max-width: 950px) { body .picture-header_text { border-left: solid 4px rgba(255, 153, 51, 0.7); -webkit-transform: translateX(0.8em); transform: translateX(0.8em); padding-left: .8em; } }
+
+@media screen and (max-width: 440px) { body .picture-header_text { border-left: solid 2px rgba(255, 153, 51, 0.7); border-bottom: solid 1px rgba(255, 153, 51, 0.7); -webkit-transform: translateX(0.4em); transform: translateX(0.4em); padding-left: .3em; padding-bottom: .3em; } }
+
+body .picture-header_text h1 { color: #fff2e6; font-size: 3rem; }
+
+@media screen and (max-width: 950px) { body .picture-header_text h1 { font-size: 2.4rem; } }
+
+@media screen and (max-width: 440px) { body .picture-header_text h1 { font-weight: normal; font-size: 1.8rem; } }
+
+body .picture-header_text h2.fancy { font-size: 2rem; font-weight: normal; }
+
+@media screen and (max-width: 950px) { body .picture-header_text h2.fancy { font-size: 1.4rem; } }
+
+@media screen and (max-width: 440px) { body .picture-header_text h2.fancy { font-size: 1rem; } }
+
+body .picture-header_text h2.fancy span.animate { margin: 0px 0px; opacity: 0; min-width: 9.250px; -webkit-transition: 350ms ease-in-out; transition: 350ms ease-in-out; display: inline-block; -webkit-transform: translateY(50px); transform: translateY(50px); }
+
+body .picture-header_text h2.fancy span.fade { opacity: 1; -webkit-transform: translateY(0px); transform: translateY(0px); }
+
+body .container-home { background-color: #fff2e6; }
 
 body .container-kenalan { background-color: #fff2e6; }
 
