--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1,3 +1,3 @@
 @import "components/id";
 @import "components/text-jumbo";
-@import "components/text-picture";
+@import "components/picture-header";
