--- a/scss/components/_picture-header.scss
+++ b/scss/components/_picture-header.scss
@@ -8,15 +8,15 @@
     // margin: 1em;
     height: 100vh;
     width: 100vw;
-    background-image: url(../../assets/img/IMG_1893-low.jpg);
+    background-image: url(../../assets/img/webp/IMG_1893-low_web.webp);
     background-size: cover;
 
     @include tablet {
-        background-image: url(../../assets/img/IMG_1893-low-tablet.jpg);
+        background-image: url(../../assets/img/webp/IMG_1893-low-tablet_web.webp);
     }
 
     @include phone {
-        background-image: url(../../assets/img/IMG_9962-low-phone.jpg);
+        background-image: url(../../assets/img/webp/IMG_9962-low-phone_web.webp);
     }
 
     &_text {
